Added Some new content for Web Forms and MVC

--- a/Lab 1 - Into to topics/Index.html
+++ b/Lab 1 - Into to topics/Index.html
@@ -33,12 +33,16 @@
 		<section class="hidden" id="webformsContentPage">
 		<div class="InformationPane">
 			<h2>What is ASP.NET Web Forms?</h2>
-			<p>JavaScript is a scripting language used mainly for web development in conjunction with HTML and CSS.  While HTML provides the content and organization of the website and CSS provides a better visual experience, JavaScript provides interactivity for the user.  JavaScript is what is known as a Client-Side script, meaning that it is executed in the clients environment.  This allows the client experience to be somewhat dynamic without having the need to request updates from the server and refresh constantly.
+			<p>This was the first programming model available for ASP.NET.  The model can be written in a language that supports the Common Language Runtime (CLR) such as 
+				visual basic and C#.  This model is designed for Rapid Application Development (RAD) and is very designer driven.  It allows you to use a drag-and-drop 
+				development model to quickly put together the front end views without extensive knowledge of html or javascript.  This is possible because the framework 
+				will automagically generate most of the markup that will be sent to the browser.  This is it's downfall however, because of the auto generated markup you 
+				have less control over some of the behaviors of your application.
 			</p>
 		</div>
 		<div class="linkSection">
-			<li class="linkSection"><a href="">tutorialspoint.com</a></li>
-			<li class="linkSection"><a href="">w3schools.com</a></li>
+			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
+			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_Web_Forms">wikipedia.com</a></li>
 			<li class="linkSection"><a href="">makeuseof.com</a></li>
 		</div>
 		</section>
@@ -46,12 +50,12 @@
 		<section class="hidden" id="mvcContentPage">
 		<div class="InformationPane">
 			<h2>What is ASP.NET MVC?</h2>
-			<p>PHP, or <b>P</b>HP: <b>H</b>ypertext <b>P</b>reprocessor, is another scripting language used mainly for web development.  Unlike JavaScript however, PHP is a Server-Side scripting language.  That means its code is executed on the server.  This is also a much more robust tool that's full of features designed to respond to user requests with a personalized html response.  This allows for a website to be truly dynamic.  Some of the features that make PHP a powerful web development tool are the ability to collect input from a user,interact with different databases, and work with cookies.
+			<p>This programming model is designed to give the developer much more power and control over the application and its behaviors.  
 			</p>
 		</div>
 		<div class="linkSection">
-			<li class="linkSection"><a href="">w3schools.com</a></li>
-			<li class="linkSection"><a href="">thoughtco.com</a></li>
+			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
+			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_MVC">wikipedia.com</a></li>
 			<li class="linkSection"><a href="">tutorialspoint.com</a></li>
 		</div>
 		</section>
@@ -59,12 +63,12 @@
 		<section class="hidden" id="coreContentPage">
 		<div class="InformationPane">
 			<h2>What is ASP.NET Core?</h2>
-			<p>Ajax stands for <b>A</b>synchronous <b>J</b>avaScript and <b>X</b>ML.  Ajax is actually not a programming language but rather, it is a set of principles and techniques for web development.  Some of these techniques include HTML/XHTML, the Document Object Model(DOM), XML(plain text or JSON), the XMLHttoRequest oblect, and JavaScript.  It works to enhance the user experience by providing speed and functionality.  Ajax does this by using JavaScript to make an HTTP request in a seperate thread, interpreting the XML, and updating the interface without reloading the whole page.  This results in the user being able to continue to use the current page while the requests are made in the background.
+			<p>
 			</p>
 		</div>
 		<div class="linkSection">
-			<li class="linkSection"><a href="">w3schools.com</a></li>
-			<li class="linkSection"><a href="">hostinger.com</a></li>
+			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
+			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_Core">wikipedia.com</a></li>
 			<li class="linkSection"><a href="">tutorialspoint.com</a></li>	
 		</div>
 		</section>
@@ -72,12 +76,17 @@
 		<section id="page_content">
 		<div class="InformationPane">
 			<h2>What is ASP.NET Web Forms?</h2>
-			<p>JavaScript is a scripting language used mainly for web development in conjunction with HTML and CSS.  While HTML provides the content and organization of the website and CSS provides a better visual experience, JavaScript provides interactivity for the user.  JavaScript is what is known as a Client-Side script, meaning that it is executed in the clients environment.  This allows the client experience to be somewhat dynamic without having the need to request updates from the server and refresh constantly.
+			<p>This was the first programming model available for ASP.NET.  The model can be written in a language that supports the Common Language Runtime (CLR) such as 
+				visual basic and C#.  This model is designed for Rapid Application Development (RAD) and is very designer driven.  It allows you to use a drag-and-drop 
+				development model to quickly put together the front end views without extensive knowledge of html or javascript.  This is possible because the framework 
+				will automagically generate most of the markup that will be sent to the browser.  This is it's downfall however, because of the auto generated markup you 
+				have less control over some of the behaviors of your application.
+			</p>
 			</p>
 		</div>
 		<div class="linkSection">
-			<li class="linkSection"><a href="">tutorialspoint.com</a></li>
-			<li class="linkSection"><a href="">w3schools.com</a></li>
+			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
+			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_Web_Forms">wikipedia.com</a></li>
 			<li class="linkSection"><a href="">makeuseof.com</a></li>
 		</div>
 		</section>
