Content Added, Links added, Kinks worked out

--- a/Lab 1 - Into to topics/Index.html
+++ b/Lab 1 - Into to topics/Index.html
@@ -4,9 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<title>ASP.NET Introduction</title>
 
-	<link type="text/css" rel="Stylesheet" href="style/ff.css" />
+	<link type="text/css" rel="Stylesheet" href="Style/ff.css" />
 				 
-	<link type="text/css" rel="Stylesheet" href="style/ThreeTabsStyle.css"/>
+	<link type="text/css" rel="Stylesheet" href="Style/ThreeTabsStyle.css"/>
 		
 			
 <script type="text/javascript" src="Script/TabSwitcher.js"></script>
@@ -33,7 +33,7 @@
 		<section class="hidden" id="webformsContentPage">
 		<div class="InformationPane">
 			<h2>What is ASP.NET Web Forms?</h2>
-			<p>This was the first programming model available for ASP.NET.  The model can be written in a language that supports the Common Language Runtime (CLR) such as 
+			<p>This was the first programming model available for ASP.NET.  The model utilizes the .NET framework and can be 	written in a language that 		supports the Common Language Runtime (CLR) such as 
 				visual basic and C#.  This model is designed for Rapid Application Development (RAD) and is very designer driven.  It allows you to use a drag-and-drop 
 				development model to quickly put together the front end views without extensive knowledge of html or javascript.  This is possible because the framework 
 				will automagically generate most of the markup that will be sent to the browser.  This is it's downfall however, because of the auto generated markup you 
@@ -43,33 +43,37 @@
 		<div class="linkSection">
 			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
 			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_Web_Forms">wikipedia.com</a></li>
-			<li class="linkSection"><a href="">makeuseof.com</a></li>
+			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/aspnet/web-forms/overview/getting-started/getting-started-with-aspnet-45-web-forms/introduction-and-overview">microsoft.com</a></li>
 		</div>
 		</section>
 		
 		<section class="hidden" id="mvcContentPage">
 		<div class="InformationPane">
 			<h2>What is ASP.NET MVC?</h2>
-			<p>This programming model is designed to give the developer much more power and control over the application and its behaviors.  
+			<p>This programming model splits the project into three different layers.
+				<br>The <b>Model</b>      - Business Layer
+				<br>The <b>View</b>       - Display Layer
+				<br>The <b>Controller</b> - Input Control<br>
+				This allows multiple teams to work on the same project without too much interference because the code is separated.  Designers can work on the front end and developers can work on the back-end.  This model also gives much more control over the behavior of the project by giving the user direct control over much of the front end development that the Web Form model automates.  This model works well with larger and complex projects and supports unit testing among other features.
 			</p>
 		</div>
 		<div class="linkSection">
 			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
 			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_MVC">wikipedia.com</a></li>
-			<li class="linkSection"><a href="">tutorialspoint.com</a></li>
+			<li class="linkSection"><a href="https://www.tutorialspoint.com/asp.net_mvc/index.htm">tutorialspoint.com</a></li>
 		</div>
 		</section>
 		
 		<section class="hidden" id="coreContentPage">
 		<div class="InformationPane">
 			<h2>What is ASP.NET Core?</h2>
-			<p>
+			<p>This programming model is an updated version of the previous two which combines them into one cross platform, app building machine.  Version 2.x supports both the .NET framework and the .NET core.  Future version will strictly target the .NET core, which is where its cross platform capabilities come from.  Although this seems like a setback, there is a lot of work being done to close the API gap between .NET framework and .NET core.  This model also introduces Razor pages, which is a markup syntax designed to provide a smoother work-flow when adding code blocks to HTML.
 			</p>
 		</div>
 		<div class="linkSection">
-			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
+			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/aspnet/core/?view=aspnetcore-3.1">Microsoft Docs</a></li>
 			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_Core">wikipedia.com</a></li>
-			<li class="linkSection"><a href="">tutorialspoint.com</a></li>	
+			<li class="linkSection"><a href="https://dotnet.microsoft.com/learn/aspnet/what-is-aspnet-core">microsoft.com</a></li>	
 		</div>
 		</section>
 
@@ -87,7 +91,7 @@
 		<div class="linkSection">
 			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/previous-versions/4w3ex9c2(v=vs.140)?redirectedfrom=MSDN">Microsoft Docs</a></li>
 			<li class="linkSection"><a href="https://en.wikipedia.org/wiki/ASP.NET_Web_Forms">wikipedia.com</a></li>
-			<li class="linkSection"><a href="">makeuseof.com</a></li>
+			<li class="linkSection"><a href="https://docs.microsoft.com/en-us/aspnet/web-forms/overview/getting-started/getting-started-with-aspnet-45-web-forms/introduction-and-overview">microsoft.com</a></li>
 		</div>
 		</section>
 	
